Add support for non chronological events

--- a/_data/election-2016.yml
+++ b/_data/election-2016.yml
@@ -1,3 +1,4 @@
+chronological_events: true
 title: The 2016 Presidential Election
 intro: |-
   As a CDN, we’re in a unique position to view traffic patterns on the
